--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <div style="height: 70px;">
                             {{ UPGS.adm[r*10+c].desc() }}
                         </div>
-                        Cost: {{ format(UPGS.adm[r*10+c].cost(), 0) }} RP
+                        Cost: {{ format(UPGS.adm[r*10+c].cost(), 0) }} ARP
                         <span v-if="UPGS.adm[r*10+c].effect"><br>Currently: {{ UPGS.adm[r*10+c].effDesc() }}</span>
                     </div>
                 </div>
