--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <div v-if="player.upgs.gears.includes(11)">Auto-buy mass upgrades: <input type="checkbox" v-model="player.automators.mass_upgs"></div>
             <div v-if="player.upgs.gears.includes(12)">Auto-rank: <input type="checkbox" v-model="player.automators.rank"></div>
             <div v-if="player.upgs.gears.includes(13)">Auto-tier: <input type="checkbox" v-model="player.automators.tier"></div>
+            <div v-if="player.upgs.gp.includes(12)">Auto-tetr: <input type="checkbox" v-model="player.automators.tetr"></div>
         </div><div v-if='player.tabs[0] == 4'>
             <button class="prestige_reset rage_powers_tab" onclick="FUNCS.gains.rage_powers.reset()" v-bind:class="{closed: !FUNCS.gains.rage_powers.canReset()}">Reset for<br><b>{{ format(FUNCS.gains.rage_powers.points(), 0) }}</b><br>Rage Powers</button><br><br>
             You have <h2>{{ format(player.rage_powers, 0) }}</h2> Rage Powers, which multiples mass gain based on unspent mass: log10(x+1)^{{ format(FUNCS.gains.rage_powers.effect().pow) }}<br>
@@ -179,6 +180,22 @@
                             </div>
                             {{ FUNCS.msgs.secret(MILESTONES.multiverse[x].desc(), MILESTONES.multiverse[x-1].can()) }}
                         </div>
+                    </div>
+                </div>
+            </div><div v-if='player.tabs[1] == 1'>
+                You have <h2>{{ format(player.multiverse.gp,0) }}</h2> Grid Powers.<br>
+                You generated {{ format(FUNCS.gains.gp(),0) }} Grid Powers per second (based on Multiverse number).<br><br>
+                <div style="width: 100%; height: 100px; background-color: #111;">
+                    <div v-if='UPGS.gp[player.msgs.gpID]'>
+                        <div style="height: 40px;">{{ UPGS.gp[player.msgs.gpID].desc() }}</div>
+                        Cost: {{ format(UPGS.gp[player.msgs.gpID].cost(), 0) }} Gear Powers<br>
+                        <span v-if="UPGS.gp[player.msgs.gpID].effect">Currently: {{ UPGS.gp[player.msgs.gpID].effDesc() }}</span>
+                    </div>
+                </div><br>
+                <div v-for='r in UPGS.gp.rows' class="table_center">
+                    <div v-for='c in UPGS.gp.cols' @mouseover="player.msgs.gpID = r*10+c" class="upgrade gp" v-if="UPGS.gp[r*10+c].unl()" v-bind:class="{closed: !UPGS.gp[r*10+c].can() && !player.upgs.gp.includes(r*10+c), unlocked: player.upgs.gp.includes(r*10+c)}" v-on:click="UPGS.buy('gp', r*10+c)">
+                        <br>
+                        {{ r }}:{{ c }}
                     </div>
                 </div>
             </div>
