--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div style="width: 100%; height: 100px; background-color: #111;">
                     <div v-if='UPGS.gp[player.msgs.gpID]'>
                         <div style="height: 40px;">{{ UPGS.gp[player.msgs.gpID].desc() }}</div>
-                        Cost: {{ format(UPGS.gp[player.msgs.gpID].cost(), 0) }} Gear Powers<br>
+                        Cost: {{ format(UPGS.gp[player.msgs.gpID].cost(), 0) }} Grid Powers<br>
                         <span v-if="UPGS.gp[player.msgs.gpID].effect">Currently: {{ UPGS.gp[player.msgs.gpID].effDesc() }}</span>
                     </div>
                 </div><br>
