--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span v-if='player.unlocked.includes("black_hole")'>Mass Power: x{{ format(FUNCS.getMassPower()) }}</span>
         </div>
         <div style="height: 120px">
-            You pushed <h2>{{ formatMass(player.mass) }}</h2><br>
+            You pushed <h1>{{ formatMass(player.mass) }}</h1><br>
             (+{{ formatMass(FUNCS.gainMass()) }}/s)<br>
             Mass capacity is <h2>{{ formatMass(FUNCS.getMaxMass()) }}</h2><br>
             <span v-if="FUNCS.penaltyMass().gt(1)">Will penalty mass gain by <h2>/{{ format(FUNCS.penaltyMass(), 1) }}</h2></span><br>
@@ -34,34 +34,48 @@
             </div>
         </div><br>
         <div v-if='player.tabs[0] == 0'>
-            <div style="height: 100px">
-                Rank {{ format(player.rank, 0) }} <button onclick="FUNCS.rank.reset()" v-bind:class="{closed: !FUNCS.rank.can()}">Reach max capacity for new rank</button><br>
-                Tier {{ format(player.tier, 0) }} <button onclick="FUNCS.tier.reset()" v-bind:class="{closed: !FUNCS.tier.can()}">Reach Rank {{ format(FUNCS.tier.req(), 0) }} for new tier</button><br>
-                <span v-if="MILESTONES.multiverse[1].can()">Tetr {{ format(player.tetr, 0) }} <button onclick="FUNCS.tetr.reset()" v-bind:class="{closed: !FUNCS.tetr.can()}">Reach Tier {{ format(FUNCS.tetr.req(), 0) }} for new tetr</button><br><br></span>
-            </div>
-            <div class="table_center" v-if="player.rank.gte(1)">
-                <div style="width: 40%;">
-                    <h2>Milestones</h2><br>
-                    <div v-for='x in MILESTONES.rank.rows' style="border: solid 3px white; text-align: left;" v-if="MILESTONES.rank[x].can()">
-                        Rank {{ format(MILESTONES.rank[x].req(), 0) }}: {{ MILESTONES.rank[x].desc() }}
-                    </div><br>
-                    <div v-for='x in MILESTONES.tier.rows' style="border: solid 3px white; text-align: left;" v-if="MILESTONES.tier[x].can()">
-                        Tier {{ format(MILESTONES.tier[x].req(), 0) }}: {{ MILESTONES.tier[x].desc() }}
-                    </div><br>
-                    <div v-for='x in MILESTONES.tetr.rows' style="border: solid 3px white; text-align: left;" v-if="MILESTONES.tetr[x].can()">
-                        Tetr {{ format(MILESTONES.tetr[x].req(), 0) }}: {{ MILESTONES.tetr[x].desc() }}
-                    </div><br>
-                </div><div style="width: 40%;">
-                    <h2>Upgrades</h2><br>
-                    <div class="table_center">
-                        <div v-for='x in UPGS.mass.cols' class="upgrade" v-if="UPGS.mass[x].unl()" v-bind:class="{closed: !UPGS.mass[x].can()}" v-on:click="UPGS.buy('mass', x)">
-                            <div style="height: 70px;">
-                                {{ UPGS.mass[x].desc() }}
+            <div class="table_center">
+                <div v-for='x in TABS[2]["Upgrades"]' v-if='x.unl()'>
+                    <button v-on:click="FUNCS.chTabs(1, TABS[2]['Upgrades'].indexOf(x))" v-bind:class="{[x.style]: true}">{{ x.id }}</button>
+                </div>
+            </div><br><div v-if='player.tabs[1] == 0'>
+                <div style="height: 100px">
+                    Rank {{ format(player.rank, 0) }} <button onclick="FUNCS.rank.reset()" v-bind:class="{closed: !FUNCS.rank.can()}">Reach max capacity for new rank</button><br>
+                    Tier {{ format(player.tier, 0) }} <button onclick="FUNCS.tier.reset()" v-bind:class="{closed: !FUNCS.tier.can()}">Reach Rank {{ format(FUNCS.tier.req(), 0) }} for new tier</button><br>
+                    <span v-if="MILESTONES.multiverse[1].can()">Tetr {{ format(player.tetr, 0) }} <button onclick="FUNCS.tetr.reset()" v-bind:class="{closed: !FUNCS.tetr.can()}">Reach Tier {{ format(FUNCS.tetr.req(), 0) }} for new tetr</button><br><br></span>
+                </div>
+                <div class="table_center" v-if="player.rank.gte(1)">
+                    <div style="width: 40%;">
+                        <h2>Milestones</h2><br>
+                        <div v-for='x in MILESTONES.rank.rows' style="border: solid 3px white; text-align: left;" v-if="MILESTONES.rank[x].can()">
+                            Rank {{ format(MILESTONES.rank[x].req(), 0) }}: {{ MILESTONES.rank[x].desc() }}
+                        </div><br>
+                        <div v-for='x in MILESTONES.tier.rows' style="border: solid 3px white; text-align: left;" v-if="MILESTONES.tier[x].can()">
+                            Tier {{ format(MILESTONES.tier[x].req(), 0) }}: {{ MILESTONES.tier[x].desc() }}
+                        </div><br>
+                        <div v-for='x in MILESTONES.tetr.rows' style="border: solid 3px white; text-align: left;" v-if="MILESTONES.tetr[x].can()">
+                            Tetr {{ format(MILESTONES.tetr[x].req(), 0) }}: {{ MILESTONES.tetr[x].desc() }}
+                        </div><br>
+                    </div><div style="width: 40%;">
+                        <h2>Upgrades</h2><br>
+                        <div class="table_center">
+                            <div v-for='x in UPGS.mass.cols' class="upgrade" v-if="UPGS.mass[x].unl()" v-bind:class="{closed: !UPGS.mass[x].can()}" v-on:click="UPGS.buy('mass', x)">
+                                <div style="height: 70px;">
+                                    {{ UPGS.mass[x].desc() }}
+                                </div>
+                                Cost: {{ formatMass(UPGS.mass[x].cost()) }}<br>
+                                Level {{ format(FUNCS.hasUpgrade('mass', x), 0) }}
+                                <span v-if="UPGS.mass[x].effect"><br>Currently: {{ UPGS.mass[x].effDesc() }}</span>
                             </div>
-                            Cost: {{ formatMass(UPGS.mass[x].cost()) }}<br>
-                            Level {{ format(FUNCS.hasUpgrade('mass', x), 0) }}
-                            <span v-if="UPGS.mass[x].effect"><br>Currently: {{ UPGS.mass[x].effDesc() }}</span>
                         </div>
+                    </div>
+                </div>
+            </div><div v-if='player.tabs[1] == 1'>
+                You have <h1>{{ format(FUNCS.getExMass(), 0) }}</h1> of ex-mass.<br><br><br>
+                <div class="table_center">
+                    <div v-for='x in UPGS.ex_mass.cols' v-if="UPGS.ex_mass[x].unl()" style="width: 350px; height: 150px;">
+                        <b>Ex-Mass Boost {{ romanize(x) }}</b><br><br>
+                        {{ UPGS.ex_mass[x].desc() }}<br><h2>{{ UPGS.ex_mass[x].effDesc() }}<h2>
                     </div>
                 </div>
             </div>
@@ -88,6 +102,7 @@
                 </div>
             </div><br>
             <div v-if="player.upgs.gears.includes(11)">Auto-buy mass upgrades: <input type="checkbox" v-model="player.automators.mass_upgs"></div>
+            <div v-if="player.upgs.gp.includes(53)">Auto-buy DM upgrades: <input type="checkbox" v-model="player.automators.dm_upgs"></div>
             <div v-if="player.upgs.gears.includes(12)">Auto-rank: <input type="checkbox" v-model="player.automators.rank"></div>
             <div v-if="player.upgs.gears.includes(13)">Auto-tier: <input type="checkbox" v-model="player.automators.tier"></div>
             <div v-if="player.upgs.gp.includes(12)">Auto-tetr: <input type="checkbox" v-model="player.automators.tetr"></div>
